modules/aws_ec2/main.tf
terraform {
  required_version = "1.6.2"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.24.0"
    }
  }
}

provider "aws" {
  profile = var.aws_profile
  region  = var.aws_region

  default_tags {
    tags = merge(var.common_tags, { "Environment" = var.environment })
  }
}

resource "aws_instance" "this" {
  count                  = var.how_many_instances
  ami                    = var.ami
  instance_type          = var.instance_type
  vpc_security_group_ids = [aws_security_group.instance.id]

  tags = {
    "Name" = format("%s-%s-%02d", var.project_name, var.environment, count.index + 1)
  }

  user_data = <<EOF
#!/bin/bash
sudo apt update && apt install -y apache2
sudo echo "Hello, World from ${count.index}!" > /var/www/html/index.html
sudo echo "Hello, World from ${count.index}!" > index.html
sudo service apache2 restart
EOF
}

resource "aws_security_group" "instance" {
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
